updated user schema to handle errors for enum fields, updated user routes for better clarity and error handling, updated swagger docs for user routes and model definitions
